# EndStone-PlayerRegister

./: .gitignore  CMakeLists.txt  FIXES_SUMMARY.md  GITHUB_ACTIONS.md  WINDOWS_BUILD_FIXES.md  test_build.bat
.github/workflows/: build.yml  lint.yml  release.yml
EndStone-PlayerRegister/: LICENSE  README.md
EndStone-PlayerRegister/include/: player_data.h  player_register_plugin.h
EndStone-PlayerRegister/src/: account_manager.cpp  player_register_plugin.cpp
include/: account_manager.h  auth_command_executor.h  auth_listener.h  config.h  database.h  player_manager.h  player_register.h  player_register_command.h  player_register_listener.h  sha256.h
src/: account_manager.cpp  auth_command_executor.cpp  auth_listener.cpp  config.cpp  database.cpp  player_manager.cpp  player_register.cpp  player_register_listener.cpp  plugin_main.cpp  sha256.cpp
